--- a/stylestudents.css
+++ b/stylestudents.css
@@ -1,17 +1,24 @@
 body {
-    height: 100vh;
-    width: 100vw;
+   margin: 0;
 }
 
-#searchStudent {
+#searchBoxStudent {
     height: 50px;
     width: 50vw;
     background-color: beige;
+    margin-top: 10px;
+}
+
+#searchStudent {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #searchResult {
-    height: 100px;
+    height: 100vh;
     width: 50vw;
     background-color: beige;
     margin-top: 40px;
+    text-align: center;
 }
