--- a/stylecourses.css
+++ b/stylecourses.css
@@ -1,7 +1,82 @@
-#resp-info {
-    background-color: green;
+#resp-div {
+    background-color: rgb(189, 188, 188);
+    border: solid 1px rgb(64, 68, 64);
+    border-radius: 20px;
+    text-align: center;
 }
 
 .done {
-    background-color: green;
+    background-color: rgb(182, 206, 182);
+    padding: 1px;
+    border: solid 1px rgb(84, 114, 84);
+    border-radius: 20px;
+    text-align: center;
+    margin-bottom: 1px;
+}
+
+.not-done {
+    border: solid 1px rgb(64, 68, 64);
+    border-radius: 20px;
+    padding: 1px;
+    text-align: center;
+    margin-bottom: 1px;
+}
+
+#course-div {
+    border: solid 1px black;
+    border-radius: 20px;
+    padding: 5px;
+    margin-bottom: 3px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 80px 200px 1fr;
+}
+
+h2 {
+    text-align: center;
+    font-family: 'Libre Franklin', sans-serif;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 2;
+}
+
+h3 {
+    font-family: 'Libre Franklin', sans-serif;
+}
+
+#teacher-div {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 2;
+    grid-row-end: 3;
+    text-align: center;
+    border: solid 1px rgb(64, 68, 64);
+    border-radius: 20px;
+    margin-right: 1px;
+}
+
+#resp-div {
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 2;
+    grid-row-end: 3;
+}
+
+#students-div {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 4;
+    text-align: center;
+}
+
+#searchBoxCourses {
+    height: 15vh;
+    width: 100vw;
+}
+
+#searchCourses {
+    display: flex;
+    justify-content: center;
 }
