--- a/stylestudents.css
+++ b/stylestudents.css
@@ -1,24 +1,41 @@
-body {
-   margin: 0;
-}
-
 #searchBoxStudent {
-    height: 50px;
-    width: 50vw;
-    background-color: beige;
-    margin-top: 10px;
+    height: 15vh;
+    width: 100vw;
 }
 
 #searchStudent {
     display: flex;
-    align-items: center;
     justify-content: center;
 }
 
-#searchResult {
-    height: 100vh;
-    width: 50vw;
-    background-color: beige;
-    margin-top: 40px;
+h2 {
+    font-family: 'Libre Franklin', sans-serif;
     text-align: center;
+}
+
+#student-info {
+    font-family: 'Libre Franklin', sans-serif, bold;
+    font-size: 25px;
+    text-align: center;
+}
+
+#courses {
+    font-family: 'Libre Franklin', sans-serif;
+    font-size: 20px;
+    text-align: center;
+    padding: 2px;
+}
+
+.course {
+    border: solid 1px rgb(64, 68, 64);
+    border-radius: 20px;
+    text-align: center;
+    margin-bottom: 1px;
+}
+
+.student {
+    border: solid 1px black;
+    border-radius: 20px;
+    margin-bottom: 3px;
+    padding: 5px;
 }
